<resources>
    <string name="app_name">AndroidERestaurant</string>
    <string name="healthy_nation">HEALTHY NATION</string>
    <string name="plat">Plat</string>
    <string name="desserts">Desserts</string>
    <string name="entree">entree</string>
    <string name="starter">Entrées</string>
    <string name="main">Plats</string>

    <string name="bienvenue_chez_healthy_nation">hhhhhh</string>
    <string name="string_healthy_nation" />
    <string name="tcocuicoui">Tcocuicoui</string>

    <string name="category">category</string>
    <string name="basket_validation">Votre plat a bien été ajouté au panier</string>
    <string name="basket">Panier</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="total">total</string>
    <string name="order">Commander</string>
    <string name="quantity">Quantité :</string>
    <string name="register">register</string>
    <string name="address">Addresse</string>
    <string name="last_name">Nom</string>
    <string name="first_name">Prénom</string>
    <string name="mail">mail</string>
    <string name="confirmmdp">Confirmation mdp</string>
    <string name="Quantité" />

</resources>